--- a/src/components/FinanclalCards/financial_cards.module.scss
+++ b/src/components/FinanclalCards/financial_cards.module.scss
@@ -37,8 +37,8 @@
   }
 }
 @media screen and (max-width: $md-screen) {
-  .financials {
-    grid-template-columns: repeat(auto-fit, minmax(100px, 100px));
-    grid-template-rows: repeat(auto-fit, minmax(50px, 0px));
+    .financials {
+        grid-template-columns: repeat(auto-fit, minmax(100px, 100px));
+        grid-template-rows: repeat(auto-fit, minmax(70px, 0px));
   }
 }
