--- a/src/pages/Dashboard/Client/Budget/budget.module.scss
+++ b/src/pages/Dashboard/Client/Budget/budget.module.scss
@@ -3,5 +3,5 @@
   background-color: #fff;
   padding: 20px;
   width: 100%;
-  height: fit-content;
+  height: 100%;
 }
