--- a/src/pages/Dashboard/Superuser/inquiries/styles/inquiries.module.scss
+++ b/src/pages/Dashboard/Superuser/inquiries/styles/inquiries.module.scss
@@ -11,6 +11,7 @@
     background-color: white;
     border-radius: 18px 0px 0px 18px;
     position: relative;
+    overflow: hidden;
 
     h1 {
       margin-bottom: 10px;
